# svio

./: .gitignore  CMakeLists.txt  Edition statement  README.md
include/svo/: Converter.h  Data_EuRoc.h  bundle_adjustment.h  config.h  depth_filter.h  frame.h  frame_handler_base.h  frame_handler_mono.h  global.h  initialization.h  map.h  reprojector.h  sparse_align.h  vio_init.h
src/: Converter.cpp  Data_EuRoc.cpp  bundle_adjustment.cpp  config.cpp  feature_detection.cpp  five-point.cpp  frame.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  initialization.cpp  map.cpp  matcher.cpp  reprojector.cpp  vio_init.cpp
src/IMU/: IMUPreintegrator.cpp  IMUPreintegrator.h  NavState.cpp  NavState.h  configparam.cpp  configparam.h  g2otypes.cpp  g2otypes.h  imudata.cpp  imudata.h
test/: config_param.yaml  test_pipel_euroc.cpp
